--- a/resource/scss/style.scss
+++ b/resource/scss/style.scss
@@ -65,6 +65,9 @@
         width: 60px;
         height: 60px;
         line-height: 50px;
+        a {
+            color: $black_gray;
+        }
 
         i {
             font-size: 24px;
@@ -102,9 +105,10 @@
 ****************** About Me Parts Codes
 ****************************************************************/
 .about_me {
-    background: $about_bg;
     position: relative;
     padding: 100px 0px;
+    background: $about_bg;
+    
     h2 {
         font-size: 30px;
         margin-bottom: 30px;
@@ -138,14 +142,18 @@
     // my skills
     .my_skills {
         button {
-            padding: 10px 15px;
-            margin: 10px 5px;
-            background: $btn_default;
+            margin: 5px 3px;
+            background: #f2f2f2;
             border: none;
             outline: none;
             color: #222;
             font-weight: 500;
             cursor: text;
+        }
+        .skillSubTitle {
+            font-size: 16px;
+            margin: 15px 0px;
+            font-weight: 400;
         }
     }
 }
@@ -153,9 +161,9 @@
 ****************** Project Part Codes
 ****************************************************************/
 .projects {
-    padding: 140px 0px;
+    padding: 160px 0px;
     position: relative;
-    background: $white_color;
+    box-shadow: 1px 0px 1px rgb(200, 196, 196);
     // Header
     .header {
         @extend .after_line;
@@ -185,7 +193,7 @@
 ****************************************************************/
 .contact {
     background: $about_bg;
-    padding: 100px 0px;
+    padding: 90px 0px;
     position: relative;
     // Header
     .header {
@@ -199,26 +207,25 @@
     }
     // Contact Form
     .contact-form {
-        background: $white_color;
         padding: 50px 80px;
         border-radius: 10px;
         color: $black_gray;
         font-weight: 600;
-        box-shadow: 0px 0px 8px rgb(216, 213, 213);
+        font-weight: 200;
+        font-size: 16px;
+        text-align: center;
 
-        textarea, input {
-            background: #f5f5f5;
-            font-size: 18px;
-            border: none;
+        h2 {
+            font-size: 22px;
+            text-transform: capitalize;
         }
-        .form-group {
-            margin: 20px 0px;
 
-            textarea {
-                resize: none;
-            }
-            input {
-                height: 55px;
+        .contact-group {
+            margin: 20px 0px;
+            a {
+                font-weight: 600;
+                font-size: 18px;
+                color: $black_gray;
             }
         }
     }
